# Lilium-Old

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  README.md  setupBuild.bat  setupBuild.sh
.github/workflows/: linux-clang.yml  linux-gcc.yml  linux-tools.yml  linux.yml  macosx.yml  windows.yml
cross/: toolchain.cmake
dev/include/: Device.h
dev/src/: main.cpp
docs/: Signals.md  Threads.md
filesystems/: CMakeLists.txt  fsdefns.h
filesystems/ext/: CMakeLists.txt  ext2.c  ext2.h
filesystems/fat32/: CMakeLists.txt  fat32.h
filesystems/phantomfs/: phantomfs.h
include/: MachineInfo.h  acpi.h  bus.h  elf.h  fsinfo.h  memcpy.h  memory.h  screen.h  signal.h  stdarg.h  stdatomic.h  stddef.h  stdint.h  types.h  usthreads.h
kernel/: CMakeLists.txt
kernel/src/: libstubs.c  main.c
ld/: CMakeLists.txt  x86_64-pc-phantom-kernel-modules.ld  x86_64-pc-phantom-kernel.ld
loader/: CMakeLists.txt  loader-i386.S  loader.S
loader/i386/: CMakeLists.txt  i386-pc-phantom-loader.ld  img-include.s  loader-i386.S  osimg.c
src/: acpi.S  bus.S  interrupts.S  machine_info.S  memcpy.c  printk.c  start_kernel.c
threads/: CMakeLists.txt
threads/include/: Signal.h  ThreadHandle.h
threads/src/: main.c
threads/x86_64/src/: main.c
x86_64/: CMakeLists.txt
x86_64/include/: MachineInfo.h  errors.h  memory.h  types.h
x86_64/loader/: CMakeLists.txt  img-include.S  img-include.s  loader.S  memcpy.c
x86_64/src/: acpi.S  bus.S  interrupts.S  kalloc.c  kmap.c  memcpy.c  printk.c  start_kernel.c  syscall.S
